--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "reactstrap": "^8.6.0"
   },
   "description": "Full food delivery app with Stripe Billing",
-  "main": "index.js",
-  "author": "jrw@mit.edu",
-  "license": "MIT"
+  "author": "Gustavo Santiagoo",
+  "license": "MIT",
+  "engines": {
+    "node": "18.x"
+  }
 }
